# ImageRecoveryTEC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
GUI_ImageRecovery/: ImageRecoveryGUI.cpp  ImageRecoveryGUI.h
XML/: ReadWrite.cpp  ReadWrite.h
dataStructures/: CircularLinkedList.h
html/: _hex_genetic_algo_8h_source.html  _image_manager_8h_source.html  _read_write_8h_source.html  annotated.html  annotated_dup.js  class_hex_genetic_algo-members.html  class_hex_genetic_algo.html  class_hex_genetic_algo.js  class_image_manager-members.html  class_image_manager.html  class_image_manager.js  class_read_write-members.html  class_read_write.html  class_read_write.js  classes.html  dir_0f9694b8de2575528c6c0ae9f79dda65.html  dir_0f9694b8de2575528c6c0ae9f79dda65.js  dir_2254ed4c86842eb07fcb8e0eac2ef2c8.html  dir_24ab83976e9976d55d98b0600ae3d861.html  dir_24ab83976e9976d55d98b0600ae3d861.js  dir_3c9f3ed66bc349525b536302ffbe5a4f.html  dir_6de1940466803d61d2f9d1259cb01031.html  dir_6de1940466803d61d2f9d1259cb01031.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_cb8aebdcbcd7898634ff25bad2892a2f.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  files_dup.js  functions.html  functions_func.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html  struct_member-members.html  struct_member.html  struct_population-members.html  struct_population.html
image/: ImageManager.cpp  ImageManager.h  gen1.ppm  ti1.ppm  ti2.ppm
latex/: _hex_genetic_algo_8h_source.tex  _image_manager_8h_source.tex  _read_write_8h_source.tex  annotated.tex  files.tex  (+6 more)
(+20 files in other folders)
